# ScreenshotTranslator2

./: .gitignore  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
app/: config.py  diff_engine.py  llama_client.py  main.py  tts.py
app/chat_templates/: qwen3.5-35b-a3b.chat_template.jinja
app/scripts/: build_llama.sh  setup_tts.py
app/static/: index.html  main.js
gnome-extension/: extension.js  metadata.json  stylesheet.css
gnome-extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.screenshot-translator.gschema.xml
windows/OverlayClient/: ApiClient.cs  App.xaml  App.xaml.cs  AppSettings.cs  CtrlHoldSelector.cs  DebugLogger.cs  DebugRoiWindow.cs  DragRoiSelector.cs  GestureCoordinator.cs  KeyboardHook.cs  LiveRoiWindow.cs  Models.cs  MouseHook.cs  OverlayClient.csproj  OverlayManager.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  README.md  RoiCalculator.cs  ScreenCapture.cs  TranslationService.cs  TrayIcon.cs  Win32Helpers.cs  settings.json
