[project]
name = "screenshot-translator"
version = "4.2.0"
description = "Clipboard screenshot OCR + JP translation using llama.cpp Qwen3-VL"
authors = [{ name = "" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pillow>=10.4.0",
  "httpx>=0.27.2",
  "kokoro-onnx>=0.4.9",
  "onnxruntime>=1.23.2",
  "sounddevice>=0.5.3",
  "soundfile>=0.13.1",
  "misaki[ja]>=0.9.4",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
